--- a/main.ipynb
+++ b/main.ipynb
@@ -14,7 +14,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "files = {'upload_file': open('file.txt','rb')}\n",
+    "values = {'DB': 'photcat', 'OUT': 'csv', 'SHORT': 'short'}\n",
+    "\n",
+    "r = requests.post(url, files=files, data=values)"
+   ]
   }
  ],
  "metadata": {
