--- a/main.ipynb
+++ b/main.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = {'upload_file': open('file.txt','rb')}\n",
+    "files = {'upload_file': open('file.txt','r')}\n",
     "values = {'DB': 'photcat', 'OUT': 'csv', 'SHORT': 'short'}\n",
     "\n",
     "r = requests.post(url, files=files, data=values)"
