--- a/main.ipynb
+++ b/main.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "url = 'https://100api.orai.dev/cv001'\n",
     "files = {'upload_file': open('images.jpeg','r')}\n",
     "values = {'DB': 'photcat', 'OUT': 'csv', 'SHORT': 'short'}\n",
     "\n",
