--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
    ],
    "source": [
     "url = 'https://100api.orai.dev/cv001'\n",
-    "files = {'upload_file': open('images.jpeg','r','utf-8')}\n",
+    "files = {'upload_file': open}\n",
     "\n",
     "r = requests.post(url, files=files)"
    ]
@@ -38,7 +38,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = 'https://api.fpt.ai/vision/idr/vnm'\n",
+    "    files = {'image': file}\n",
+    "    headers = {\n",
+    "        'api-key': '2YBROm3NcIm0KFG5YBNPX9WuCrP5RWiu'\n",
+    "    }\n",
+    "    response = requests.post(url, files=files, headers=headers).json()"
+   ]
   }
  ],
  "metadata": {
