--- a/main.ipynb
+++ b/main.ipynb
@@ -39,12 +39,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://api.fpt.ai/vision/idr/vnm'\n",
-    "    files = {'image': file}\n",
-    "    headers = {\n",
+    "url = 'https://100api.orai.dev/cv001'\n",
+    "files = {'image': file}\n",
+    "headers = {\n",
     "        'api-key': '2YBROm3NcIm0KFG5YBNPX9WuCrP5RWiu'\n",
     "    }\n",
-    "    response = requests.post(url, files=files, headers=headers).json()"
+    "response = requests.post(url, files=files, headers=headers).json()"
    ]
   }
  ],
