--- a/main.ipynb
+++ b/main.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "url = 'https://100api.orai.dev/cv001'\n",
-    "files = {'image': 'images.jpeg'}\n",
+    "files = {'image': open('images.jpeg')}\n",
     "headers = {\n",
     "        'api-key': '2YBROm3NcIm0KFG5YBNPX9WuCrP5RWiu'\n",
     "    }\n",
