--- a/main.ipynb
+++ b/main.ipynb
@@ -62,7 +62,7 @@
     "url = 'https://100api.orai.dev/cv001'\n",
     "files = {'image': 'images.jpeg'}\n",
     "headers = {\n",
-    "        'api-key': '2YBROm3NcIm0KFG5YBNPX9WuCrP5RWiu'\n",
+    "        'Authorization': 'ai_market'\n",
     "    }\n",
     "response = requests.post(url, files=files, headers=headers).json()"
    ]
