--- a/main.ipynb
+++ b/main.ipynb
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = 'https://100api.orai.dev/cv001'\n",
-    "files = {'image': open('./images.jpeg','rb')}\n",
+    "files = {'file': open('./images.jpeg','rb')}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "{'data': \"'NoneType' object has no attribute 'save'\", 'status': 'error'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
