--- a/main.ipynb
+++ b/main.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "url = 'https://100api.orai.dev/cv001'\n",
-    "files = {'files': open('./images.jpeg','rb')}\n",
+    "files = {'input_source': open('./images.jpeg','rb')}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
