--- a/main.ipynb
+++ b/main.ipynb
@@ -40,7 +40,7 @@
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, files=files, headers=headers).json()"
+    "response = requests.post(url, files=files, headers=headers)"
    ]
   },
   {
