--- a/main.ipynb
+++ b/main.ipynb
@@ -25,22 +25,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "b''"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response.raw.read()"
+    "\n",
+    "with open('lo.png', 'w') as f:\n",
+    "        f.write(response.raw.read())"
    ]
   },
   {
