--- a/main.ipynb
+++ b/main.ipynb
@@ -40,7 +40,8 @@
     }
    ],
    "source": [
-    "response.raw.read()"
+    "with open('image.png', 'w') as f:\n",
+    "        f.write(response.raw.read())"
    ]
   },
   {
