--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,10 @@
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, files=files, headers=headers)"
+    "response = requests.post(url, files=files, headers=headers)\n",
+    "with open('image.png', 'wb') as f:\n",
+    "        for chunk in response:\n",
+    "            f.write(chunk)"
    ]
   },
   {
@@ -28,11 +31,7 @@
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "with open('image.png', 'wb') as f:\n",
-    "        for chunk in response:\n",
-    "            f.write(chunk)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
