--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,17 @@
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = 'https://100api.orai.dev/cv001'\n",
+    "files = {'input_source_hash': open('./images.jpeg','rb')}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, files=files, headers=headers)\n",
+    "with open('image.png', 'wb') as f:\n",
+    "        for chunk in response:\n",
+    "            f.write(chunk)"
+   ]
   },
   {
    "cell_type": "code",
