--- a/main.ipynb
+++ b/main.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "url = 'https://100api.orai.dev/cv001'\n",
-    "files = {'input_source_hash': open('./images.jpeg','rb')}\n",
+    "files = {'input_source_hash': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
