--- a/main.ipynb
+++ b/main.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,9 +38,7 @@
     "        'Authorization': 'ai_market'\n",
     "    }\n",
     "response = requests.post(url, files=files, headers=headers)\n",
-    "with open('image.png', 'wb') as f:\n",
-    "        for chunk in response:\n",
-    "            f.write(chunk)"
+    "response.json()"
    ]
   },
   {
