--- a/main.ipynb
+++ b/main.ipynb
@@ -28,9 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': \"'NoneType' object has no attribute 'save'\", 'status': 'error'}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "url = 'https://100api.orai.dev/cv001'\n",
     "files = {'input_source_hash': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
@@ -38,7 +49,7 @@
     "        'Authorization': 'ai_market'\n",
     "    }\n",
     "response = requests.post(url, files=files, headers=headers)\n",
-    "response.json()"
+    "response"
    ]
   },
   {
