--- a/main.ipynb
+++ b/main.ipynb
@@ -44,11 +44,11 @@
    ],
    "source": [
     "url = 'https://100api.orai.dev/cv001'\n",
-    "files = {'input_source_hash': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
+    "data = {'input_source_hash': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, files=files, headers=headers)\n"
+    "response = requests.post(url, params=data, headers=headers)\n"
    ]
   },
   {
