--- a/main.ipynb
+++ b/main.ipynb
@@ -28,20 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"data\":\"\\'NoneType\\' object has no attribute \\'save\\'\",\"status\":\"error\"}\\n'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = 'https://100api.orai.dev/cv001'\n",
     "data = {'input_source_hash': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
@@ -49,6 +38,26 @@
     "        'Authorization': 'ai_market'\n",
     "    }\n",
     "response = requests.post(url, params=data, headers=headers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
    ]
   },
   {
