--- a/main.ipynb
+++ b/main.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "url = 'https://100api.orai.dev/cv001'\n",
-    "data = {'input_source_hash': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
+    "data = {'input_source': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "{'data': \"'NoneType' object has no attribute 'save'\", 'status': 'error'}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
