--- a/main.ipynb
+++ b/main.ipynb
@@ -37,7 +37,7 @@
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, params=data, headers=headers)\n"
+    "response = requests.post(url, data=data, headers=headers)\n"
    ]
   },
   {
