--- a/main.ipynb
+++ b/main.ipynb
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = 'https://100api.orai.dev/cv001'\n",
-    "data = {'input_source': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
+    "data = {'input_source_hash': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "{'data': \"'NoneType' object has no attribute 'save'\", 'status': 'error'}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
