--- a/main.ipynb
+++ b/main.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,22 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'data': \"'NoneType' object has no attribute 'save'\", 'status': 'error'}"
+       "{'Hash': 'QmQn8GzawA1LivdLmQsqTtcMSeqM44tKgEYAu1syo6NWoV',\n",
+       " 'Name': 'file',\n",
+       " 'Size': '22006'}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response.json()"
+    "'https://gateway.ipfs.io/ipfs/'+response.json()['Hash']"
    ]
   },
   {
