--- a/main.ipynb
+++ b/main.ipynb
@@ -15,15 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://100api.orai.dev/cv001'\n",
-    "files = {'input_source': open('./images.jpeg','rb')}\n",
-    "headers = {\n",
-    "        'Authorization': 'ai_market'\n",
-    "    }\n",
-    "response = requests.post(url, files=files, headers=headers)\n",
-    "with open('image.png', 'wb') as f:\n",
-    "        for chunk in response:\n",
-    "            f.write(chunk)"
+    "def run_test(endpoint):\n",
+    "    url = 'https://100api.orai.dev/{endpoint}'\n",
+    "    files = {'input_source': open('./images.jpeg','rb')}\n",
+    "    headers = {\n",
+    "            'Authorization': 'ai_market'\n",
+    "        }\n",
+    "    response = requests.post(url, files=files, headers=headers)\n",
+    "    with open('image.png', 'wb') as f:\n",
+    "            for chunk in response:\n",
+    "                f.write(chunk)"
    ]
   },
   {
@@ -42,24 +43,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Hash': 'QmQn8GzawA1LivdLmQsqTtcMSeqM44tKgEYAu1syo6NWoV',\n",
-       " 'Name': 'file',\n",
-       " 'Size': '22006'}"
+       "'https://gateway.ipfs.io/ipfs/QmQn8GzawA1LivdLmQsqTtcMSeqM44tKgEYAu1syo6NWoV'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'https://gateway.ipfs.io/ipfs/'+response.json()['Hash']"
+    "r = 'https://gateway.ipfs.io/ipfs/'+response.json()['Hash']\n",
+    "r"
    ]
   },
   {
