--- a/main.ipynb
+++ b/main.ipynb
@@ -38,7 +38,8 @@
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, data=data, headers=headers)\n"
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(response.json())"
    ]
   },
   {
