--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,15 @@
     "    response = requests.post(url, files=files, headers=headers)\n",
     "    with open('image.png', 'wb') as f:\n",
     "            for chunk in response:\n",
-    "                f.write(chunk)"
+    "                f.write(chunk)\n",
+    "\n",
+    "\n",
+    "    data = {'input_source_hash': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
+    "    headers = {\n",
+    "            'Authorization': 'ai_market'\n",
+    "        }\n",
+    "    response = requests.post(url, data=data, headers=headers)\n",
+    "    print(response.json())"
    ]
   },
   {
