--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n"
+    "import requests\n",
+    "import os\n",
+    "os.remove(\"image.png\")\n"
    ]
   },
   {
