--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import os\n",
-    "os.remove(\"image.png\")\n"
+    "os.remove(\"image.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_test()"
+    "run_test('cv001')"
    ]
   }
  ],
