--- a/main.ipynb
+++ b/main.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "def run_test(endpoint):\n",
-    "    url = 'https://100api.orai.dev/{endpoint}'\n",
+    "    url = 'https://100api.orai.dev/'+endpoint\n",
     "    files = {'input_source': open('./images.jpeg','rb')}\n",
     "    headers = {\n",
     "            'Authorization': 'ai_market'\n",
