--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Hash': 'QmQn8GzawA1LivdLmQsqTtcMSeqM44tKgEYAu1syo6NWoV', 'Name': 'file', 'Size': '22006'}\n"
+     ]
+    }
+   ],
    "source": [
     "run_test('cv001')"
    ]
