--- a/main.ipynb
+++ b/main.ipynb
@@ -39,19 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Hash': 'QmQn8GzawA1LivdLmQsqTtcMSeqM44tKgEYAu1syo6NWoV', 'Name': 'file', 'Size': '22006'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "run_test('cv001')"
+    "run_test('cv001_2')"
    ]
   },
   {
