--- a/main.ipynb
+++ b/main.ipynb
@@ -41,7 +41,15 @@
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Hash': 'QmYbmBWHmR2iXWFEA2dT8gjQdtFYLVpZAfHsxyaQ6PedhN', 'Name': 'file', 'Size': '23296'}\n"
+     ]
+    }
+   ],
    "source": [
     "run_test('cv001_2')"
    ]
