--- a/main.ipynb
+++ b/main.ipynb
@@ -39,19 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Hash': 'QmYbmBWHmR2iXWFEA2dT8gjQdtFYLVpZAfHsxyaQ6PedhN', 'Name': 'file', 'Size': '23296'}\n"
+      "{'Hash': 'QmZ2dmfAs889iySeYA8ik7UBpz28YVBmpx5pT99PoGkroh', 'Name': 'file', 'Size': '31557'}\n"
      ]
     }
    ],
    "source": [
-    "run_test('cv001_2')"
+    "run_test('cv002')"
    ]
   },
   {
