--- a/main.ipynb
+++ b/main.ipynb
@@ -39,19 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Hash': 'QmZ2dmfAs889iySeYA8ik7UBpz28YVBmpx5pT99PoGkroh', 'Name': 'file', 'Size': '31557'}\n"
+      "{'Hash': 'QmVA6qB9vSoTLnT5bpGWkE3wd6mnMNEKNRAnEK7HRMfcha', 'Name': 'file', 'Size': '25431'}\n"
      ]
     }
    ],
    "source": [
-    "run_test('cv003')"
+    "run_test('cv002_2')"
    ]
   },
   {
