--- a/main.ipynb
+++ b/main.ipynb
@@ -39,11 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Hash': 'QmQn8GzawA1LivdLmQsqTtcMSeqM44tKgEYAu1syo6NWoV', 'Name': 'file', 'Size': '22006'}\n"
+     ]
+    }
+   ],
    "source": [
-    "run_test('cv002_3')"
+    "run_test('cv001')"
    ]
   },
   {
