--- a/main.ipynb
+++ b/main.ipynb
@@ -39,19 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Hash': 'QmQn8GzawA1LivdLmQsqTtcMSeqM44tKgEYAu1syo6NWoV', 'Name': 'file', 'Size': '22006'}\n"
+      "{'data': \"name 'os' is not defined\", 'status': 'error'}\n"
      ]
     }
    ],
    "source": [
-    "run_test('cv001')"
+    "run_test('cv006')"
    ]
   },
   {
