--- a/main.ipynb
+++ b/main.ipynb
@@ -28,7 +28,7 @@
     "            for chunk in response:\n",
     "                f.write(chunk)\n",
     "\n",
-    "\n",
+    "def run_test1(endpoint):\n",
     "    data = {'input_source_hash': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
     "    headers = {\n",
     "            'Authorization': 'ai_market'\n",
@@ -39,19 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'data': \"name 'os' is not defined\", 'status': 'error'}\n"
+      "{'Hash': 'QmQn8GzawA1LivdLmQsqTtcMSeqM44tKgEYAu1syo6NWoV', 'Name': 'file', 'Size': '22006'}\n"
      ]
     }
    ],
    "source": [
-    "run_test('cv003')"
+    "run_test('cv001')"
    ]
   },
   {
