--- a/main.ipynb
+++ b/main.ipynb
@@ -29,6 +29,7 @@
     "                f.write(chunk)\n",
     "\n",
     "def run_test1(endpoint):\n",
+    "    url = 'https://100api.orai.dev/'+endpoint\n",
     "    data = {'input_source_hash': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
     "    headers = {\n",
     "            'Authorization': 'ai_market'\n",
