--- a/main.ipynb
+++ b/main.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import os\n",
+    "import threading\n",
     "os.remove(\"image.png\")"
    ]
   },
