--- a/main.ipynb
+++ b/main.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,9 @@
     "            'Authorization': 'ai_market'\n",
     "        }\n",
     "    response = requests.post(url, data=data, headers=headers)\n",
-    "    print(response.json())"
+    "    print(response.json())\n",
+    "def run(endpoint):\n",
+    "    "
    ]
   },
   {
