--- a/main.ipynb
+++ b/main.ipynb
@@ -38,7 +38,9 @@
     "    response = requests.post(url, data=data, headers=headers)\n",
     "    print(response.json())\n",
     "def run(endpoint):\n",
-    "    "
+    "    x = []\n",
+    "    x.append(threading.Thread(target=run_test,args={endpoint}))\n",
+    "    x.append(threading.Thread(target=run_test1,args={endpoint}))\n"
    ]
   },
   {
