--- a/main.ipynb
+++ b/main.ipynb
@@ -40,7 +40,9 @@
     "def run(endpoint):\n",
     "    x = []\n",
     "    x.append(threading.Thread(target=run_test,args={endpoint}))\n",
-    "    x.append(threading.Thread(target=run_test1,args={endpoint}))\n"
+    "    x.append(threading.Thread(target=run_test1,args={endpoint}))\n",
+    "    for x1 in x:\n",
+    "        x1.start()\n"
    ]
   },
   {
