--- a/main.ipynb
+++ b/main.ipynb
@@ -18,7 +18,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'http://128.199.70.52:5001/api/v0/add'"
+    "url = 'http://128.199.70.52:5001/api/v0/add'\n",
+    "url = 'https://100api.orai.dev/'+endpoint\n",
+    "files = {'input_source': open('./images.jpeg','rb')}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, files=files, headers=headers)"
    ]
   },
   {
