--- a/main.ipynb
+++ b/main.ipynb
@@ -19,12 +19,9 @@
    "outputs": [],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "url = 'https://100api.orai.dev/'+endpoint\n",
-    "files = {'input_source': open('./images.jpeg','rb')}\n",
-    "headers = {\n",
-    "        'Authorization': 'ai_market'\n",
-    "    }\n",
-    "response = requests.post(url, files=files, headers=headers)"
+    "files = {'file': open('./images.jpeg','rb')}\n",
+    "\n",
+    "response = requests.post(url, files=files)"
    ]
   },
   {
