--- a/main.ipynb
+++ b/main.ipynb
@@ -14,14 +14,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
     "files = {'file': open('./images.jpeg','rb')}\n",
-    "\n",
-    "response = requests.post(url, files=files)"
+    "response = requests.post(url, files=files)\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Name': 'images.jpeg',\n",
+       " 'Hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV',\n",
+       " 'Size': '6078'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
    ]
   },
   {
