--- a/main.ipynb
+++ b/main.ipynb
@@ -7,29 +7,29 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import os\n",
     "import threading"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'images.jpeg',\n",
-       " 'Hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV',\n",
-       " 'Size': '6078'}"
+       "{'Name': 'text.png',\n",
+       " 'Hash': 'QmZk5bxtxRbWLpiYvRnueFoyEnwEMRfUHr9EQYwXDiK8dM',\n",
+       " 'Size': '16522'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
     "files = {'file': open('./text.png','rb')}\n",
     "response = requests.post(url, files=files)\n",
