--- a/100API.ipynb
+++ b/100API.ipynb
@@ -22,6 +22,7 @@
     "        'Authorization': 'ai_market'\n",
     "    }\n",
     "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
     "print(response.json())"
    ]
   }
