--- a/100API.ipynb
+++ b/100API.ipynb
@@ -13,7 +13,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmVMFbKgoG2r1BZQW5hpiYUAt2ZTJFFBs6tW6UCRqeKRrM'}\n",
+      "{'Hash': 'QmQn8GzawA1LivdLmQsqTtcMSeqM44tKgEYAu1syo6NWoV', 'Name': 'file', 'Size': '22006'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV001\n",
     "url = 'https://100api.orai.dev/cv001'\n",
