--- a/100API.ipynb
+++ b/100API.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "#CV002\n",
-    "url = 'https://100api.orai.dev/cv001_2'\n",
+    "url = 'https://100api.orai.dev/cv002'\n",
     "data = {'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
