--- a/100API.ipynb
+++ b/100API.ipynb
@@ -89,9 +89,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
+      "{'Hash': 'QmWYtM7zp3s698EKK1ybWkwpBKg8eNLvEf2bSRtLtzpBnw', 'Name': 'file', 'Size': '11918'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV002_2\n",
     "url = 'https://100api.orai.dev/cv002_2'\n",
@@ -109,7 +118,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#CV002_3\n",
+    "url = 'https://100api.orai.dev/cv002_3'\n",
+    "data = {'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   },
   {
    "cell_type": "code",
