--- a/100API.ipynb
+++ b/100API.ipynb
@@ -115,9 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
+      "{'Hash': 'QmdD7TjPfwXYgJjLZQQ4dpaVAjZyCS4cv2o6vKJ5eB2P1k', 'Name': 'output_1661764306.6392357.jpg', 'Size': '25576'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV002_3\n",
     "url = 'https://100api.orai.dev/cv002_3'\n",
@@ -135,7 +144,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#CV003_1\n",
+    "url = 'https://100api.orai.dev/cv003_1'\n",
+    "data = {'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   },
   {
    "cell_type": "code",
