--- a/100API.ipynb
+++ b/100API.ipynb
@@ -141,13 +141,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
+      "{'data': 'empty range for randrange() (0, 0, 0)', 'status': 'error'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV003_1\n",
     "url = 'https://100api.orai.dev/cv003_1'\n",
-    "data = {'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
+    "data = {'input_source_hash': 'QmdD7TjPfwXYgJjLZQQ4dpaVAjZyCS4cv2o6vKJ5eB2P1k'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
