--- a/100API.ipynb
+++ b/100API.ipynb
@@ -141,7 +141,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
+      "{'data': 'empty range for randrange() (0, 0, 0)', 'status': 'error'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CV003_1\n",
+    "url = 'https://100api.orai.dev/cv003_1'\n",
+    "data = {'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -154,26 +180,9 @@
     }
    ],
    "source": [
-    "#CV003_1\n",
-    "url = 'https://100api.orai.dev/cv003_1'\n",
-    "data = {'input_source_hash': 'QmZcMhLCSmXmboqhYfRrDLtTXdTkQPuPFYQS4fc9VLuAWP'}\n",
-    "headers = {\n",
-    "        'Authorization': 'ai_market'\n",
-    "    }\n",
-    "response = requests.post(url, data=data, headers=headers)\n",
-    "print(data)\n",
-    "print(response.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#CV003_2\n",
     "url = 'https://100api.orai.dev/cv003_2'\n",
-    "data = {'input_source_hash': 'QmZcMhLCSmXmboqhYfRrDLtTXdTkQPuPFYQS4fc9VLuAWP'}\n",
+    "data = {'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
