--- a/100API.ipynb
+++ b/100API.ipynb
@@ -223,7 +223,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#CV006\n",
+    "url = 'https://100api.orai.dev/cv004'\n",
+    "data = {'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV',\n",
+    "        'label':'flower'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   },
   {
    "cell_type": "code",
