--- a/100API.ipynb
+++ b/100API.ipynb
@@ -227,7 +227,7 @@
     "#CV006\n",
     "url = 'https://100api.orai.dev/cv006'\n",
     "data = {'input_source_hash': 'QmZyuS3R4k9RqPQQcVUTTHNmqZuRjyLygM72rdNYtYcQd6',\n",
-    "        'label':'flower'}\n",
+    "        'lang':'eng'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
