--- a/100API.ipynb
+++ b/100API.ipynb
@@ -220,9 +220,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmZyuS3R4k9RqPQQcVUTTHNmqZuRjyLygM72rdNYtYcQd6', 'lang': 'eng'}\n",
+      "{'data': \"name 'os' is not defined\", 'status': 'error'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV006\n",
     "url = 'https://100api.orai.dev/cv006'\n",
