--- a/main.ipynb
+++ b/main.ipynb
@@ -30,7 +30,7 @@
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./text.png','rb')}\n",
+    "files = {'file': open('./text1.png','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
